--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  <script>
+  <!-- <script>
     if ('serviceWorker' in navigator) {
       console.log("Will service worker register?");
       navigator.serviceWorker.register('service-worker.js').then(function(reg) {
@@ -20,7 +20,7 @@
         console.log("No it didn't. This happened: ", err)
       });
     }
-  </script>
+  </script> -->
 
   <!-- <intent-filter>
     <action android:name="android.intent.action.VIEW" />
