--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
     </div>
     <div class="row">
       <div class="col-sm-3">
-        <button id='install' type="button" class="btn btn-block">Install</button>
-        <br>
         <button id='connect' type="button" class="btn btn-block">Connect</button>
         <br>
         <button id='notify' type="button" class="btn btn-block">Not Recieving</button>
         <br>
         <button id='toggle' type="button" class="btn btn-block">Value</button>
+        <br>
+        <button id='install' type="button" class="btn btn-outline-light btn-block">Install</button>
         <!-- <br>
         <button id='send' type="button" class="btn btn-block">Send</button> -->
       </div>
