--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       log('Requesting any Bluetooth Device...');
       navigator.bluetooth.requestDevice({
         // filters: [...] <- Prefer filters to save energy & show relevant devices.
+        filters: [{name: 'SimpleBLEPeripheral'}],
         acceptAllDevices: true,
         optionalServices: [_serv_uuid]
       })
