--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Test Web BLE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="webmanifest.json">
   <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
