--- a/index.html
+++ b/index.html
@@ -302,19 +302,19 @@
     </div>
     <div class="row">
       <div class="col-sm-3">
-        <button id='connect' type="button" class="btn btn-block">Connect</button>
+        <button id='connect' type="button" class="btn btn-lg btn-block">Connect</button>
         <br>
-        <button id='notify' type="button" class="btn btn-block">Not Recieving</button>
+        <button id='notify' type="button" class="btn btn-lg btn-block">Not Recieving</button>
         <br>
-        <button id='adc' type="button" class="btn btn-block">ADC</button>
+        <button id='adc' type="button" class="btn btn-lg btn-block">ADC</button>
         <br>
         <input  id="input" type="text" class="form-control" value=0810 placeholder="Enter 0~9999" readonly=true>
         <br>
-        <button id='show' type="button" class="btn btn-block">Show</button>
+        <button id='show' type="button" class="btn btn-lg btn-block">Show</button>
         <br>
-        <button id='toggle' type="button" class="btn btn-block">Value</button>
+        <button id='toggle' type="button" class="btn btn-lg btn-block">Value</button>
         <br>
-        <button id='install' type="button" class="btn btn-outline-light btn-block">Install</button>
+        <button id='install' type="button" class="btn btn-lg btn-outline-light btn-block">Install</button>
         <!-- <br>
         <button id='send' type="button" class="btn btn-block">Send</button> -->
       </div>
