--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
       <script src="js/jquery.min.js"></script>
       <script src="js/main.js"></script>
       <h2>
-        Test-0810
+        關懷計畫發表會
         <br>
         Web BLE demo
       </h2>
