--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       navigator.bluetooth.requestDevice({
         // filters: [...] <- Prefer filters to save energy & show relevant devices.
         //filters: [{name: ['SimpleBLEPeripheral'] }],
-        filters: [],
-        //acceptAllDevices: true,
+        acceptAllDevices: true,
         optionalServices: [_serv_uuid]
       })
         .then(device => {
