--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
       let v1=value.getUint8(2);
       let v2=value.getUint8(3);
       let va=v1+v2*0x100;
-      let volt = va / 4096 * 4.1;
+      let volt = va / 4096 * 4.2;
+      //let volt = va / 4095 * 3.3;
       document.querySelector('#adc').innerText = volt.toFixed(2) + "V";
       // document.querySelector('#adc').classList.;
       if(volt<1)
