--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
       let va=v1+v2*0x100;
       let volt = va / 4096 * 4.2;
       //let volt = va / 4095 * 3.3;
-      document.querySelector('#adc').innerText = volt.toFixed(2) + "V";
+      document.querySelector('#adc').innerText = volt.toFixed(1) + "V";
+      //document.querySelector('#adc').innerText = volt.toFixed(2) + "V";
       // document.querySelector('#adc').classList.;
       if(volt<1)
       {
