--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       log('Requesting any Bluetooth Device...');
       navigator.bluetooth.requestDevice({
         // filters: [...] <- Prefer filters to save energy & show relevant devices.
-        filters: [{name: 'SimpleBLEPeripheral' }],
+        filters: [{name: 'WebBluetooth' }],
         //acceptAllDevices: true,
         optionalServices: [_serv_uuid]
       })
