--- a/index0804.html
+++ b/index0804.html
@@ -36,7 +36,7 @@
       log('Requesting any Bluetooth Device...');
       navigator.bluetooth.requestDevice({
         // filters: [...] <- Prefer filters to save energy & show relevant devices.
-        filters: [{name: 'SimpleBLEPeripheral' }],
+        filters: [{name: 'WebBluetoothIO' }],
         //acceptAllDevices: true,
         optionalServices: [_serv_uuid]
       })
