--- a/index.html
+++ b/index.html
@@ -1,402 +1,39 @@
-<!DOCTYPE html>
-<html lang="zh-tw">
-
+<html>
 <head>
-  <title>Test Web BLE</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icon.png">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- include the library -->
-  <!-- <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script> -->
-  <script src="https://unpkg.com/html5-qrcode@2.0.9/dist/html5-qrcode.min.js"></script>
-  <!-- <script async="" defer="defer" src="QR%20and%20barcode%20scanner%20using%20HTML%20and%20Javascript%20Minhaz%E2%80%99s%20Blog_files/buttons.js"></script>
-  <script src="QR%20and%20barcode%20scanner%20using%20HTML%20and%20Javascript%20Minhaz%E2%80%99s%20Blog_files/html5-qrcode.js"></script> -->
-  <!-- <style>
-    #reader {
-        width: 640px;
-    }
-    @media(max-width: 600px) {
-      #reader {
-        width: 300px;
-      }
-    }
-    .empty {
-        display: block;
-        width: 100%;
-        height: 20px;
-    }
-    .alert {
-        padding: 15px;
-        margin-bottom: 20px;
-        border: 1px solid transparent;
-        border-radius: 4px;
-    }
-    .alert-info {
-        color: #31708f;
-        background-color: #d9edf7;
-        border-color: #bce8f1;
-    }
-    .alert-success {
-        color: #3c763d;
-        background-color: #dff0d8;
-        border-color: #d6e9c6;
-    }
-    #scanapp_ad {
-        display: none;
-    }
-    @media(max-width: 1500px) {
-      #scanapp_ad {
-        display: block;
-      }
-    }
-  </style> -->
-
-  <script>
-
-    var _serv_uuid = '0000FFF0-0000-1000-8000-00805F9B34FB'.toLowerCase();
-    var _char_uuid = '0000FFF1-0000-1000-8000-00805F9B34FB'.toLowerCase();
-
-    var bluetoothDevice = null;
-    var connected = false;
-    var StatusValue;
-    var notified = false;
-    var myCharacteristic;
-
-    function log(v) {
-      var line = Array.prototype.slice.call(arguments).map(function (argument) {
-        return typeof argument === 'string' ? argument : JSON.stringify(argument);
-      }).join(' ');
-
-      document.querySelector('#log').textContent += line + '\n';
-      console.log(line);
-    }
-
-    function _connect() {
-      document.querySelector('#log').textContent = '';
-      log('Requesting any Bluetooth Device...');
-      navigator.bluetooth.requestDevice({
-        // filters: [...] <- Prefer filters to save energy & show relevant devices.
-        filters: [{name: ['SimpleBLEPeripheral'] }],
-        //acceptAllDevices: true,
-        optionalServices: [_serv_uuid]
-      })
-        .then(device => {
-          log('Connecting to GATT Server...');
-          bluetoothDevice = device;
-          bluetoothDevice.addEventListener('gattserverdisconnected', onDisconnected);
-          return device.gatt.connect();
-        })
-        .then(server => {
-          log('Getting Service...');
-          return server.getPrimaryService(_serv_uuid);
-        })
-        .then(service => {
-          log('Getting Characteristic...');
-          return service.getCharacteristic(_char_uuid);
-        })
-        .then(characteristic => {
-          //log('Reading Characteristic values...');
-          myCharacteristic = characteristic;
-          return characteristic.readValue();
-        })
-        .then(value => {
-          let v1=value.getUint8(0);
-          let v2=value.getUint8(1);
-          let va=v1+v2*0x100;
-          $('input').attr('value', va);
-          log('Reading Characteristic values... Value is ' + va);
-          connected = true;
-          StatusValue = value.getUint8(0);
-          log('Starting notifications...');
-          return myCharacteristic.startNotifications();
-        })
-        .then(_ => {
-          document.querySelector('#notify').innerText = "Receiving";
-          document.querySelector('#notify').classList.add("disabled");
-          document.querySelector('#notify').classList.remove("btn-primary");
-          notified = true;
-          myCharacteristic.addEventListener('characteristicvaluechanged',
-            handleNotifications);
-          _update();
-          log('Ready!');
-        })
-        .catch(error => {
-          if (bluetoothDevice && bluetoothDevice.gatt.connected) {
-            bluetoothDevice.gatt.disconnect();
-          }
-          bluetoothDevice = null;
-          connected = false;
-          log("Error:", error);
-          _update();
-        });
-
-    }
-
-    function onDisconnected(event) {
-      log("Disconnected by remote device!");
-      bluetoothDevice = null;
-      connected = false;
-      notified = false;
-      _update();
-    }
-
-    function _disconnect() {
-      log("_disconnect");
-      if (!connected) {
-        return;
-      }
-      log('Disconnecting from Bluetooth Device...');
-      if (bluetoothDevice.gatt.connected) {
-        bluetoothDevice.gatt.disconnect();
-      } else {
-        log('> Bluetooth Device is already disconnected');
-      }
-      _update();
-    }
-
-    function _toggle() {
-      if (!connected)
-        return;
-
-      StatusValue = StatusValue == 0 ? 1 : 0;
-      document.querySelector('#toggle').innerText = StatusValue;
-      if (StatusValue)
-        document.querySelector('#toggle').classList.add("btn-primary");
-      else
-        document.querySelector('#toggle').classList.remove("btn-primary");
-
-      _send();
-    }
-
-    function _send() {
-      if (!connected)
-        return;
-
-      var v = Uint8Array.of(7);
-      myCharacteristic.writeValue(v)
-        .then(_ => {
-          log('☜╮__ data transmitted, now value is ' + StatusValue);
-        })
-        .catch(error => {
-          log(error);
-        });
-    }
-
-    function _show() {
-      if (!connected)
-        return;
-
-      let v = Uint16Array.of(document.querySelector('#input').value);
-      myCharacteristic.writeValue(v)
-        .then(_ => {
-          log('☜╮__ data transmitted, now value is ' + v);
-        })
-        .catch(error => {
-          log(error);
-        });
-    }
-
-    function _notify() {
-      if (!connected)
-        return;
-
-      myCharacteristic.startNotifications()
-        .then(_ => {
-          log('notifications started');
-          document.querySelector('#notify').innerText = "Receiving";
-          document.querySelector('#notify').classList.add("disabled");
-          document.querySelector('#notify').classList.remove("btn-primary");
-          notified = true;
-          myCharacteristic.addEventListener('characteristicvaluechanged',
-            handleNotifications);
-        })
-        .catch(error => {
-          log(error);
-        });
-      _update();
-    }
-
-    function handleNotifications(event) {
-      let value = event.target.value;
-      // StatusValue = value.getUint8(0);
-      // document.querySelector('#toggle').innerText = StatusValue;
-      // if (StatusValue)
-      //   document.querySelector('#toggle').classList.add("btn-primary");
-      // else
-      //   document.querySelector('#toggle').classList.remove("btn-primary");
-      // log('__╭☞ data received, new value is ' + value.getUint8(0));
-      let v1=value.getUint8(2);
-      let v2=value.getUint8(3);
-      let va=v1+v2*0x100;
-      let volt = va / 4096 * 3.3;
-      document.querySelector('#adc').innerText = volt.toFixed(2) + "V";
-      // document.querySelector('#adc').classList.;
-      if(volt<1)
-      {
-        document.querySelector('#adc').classList.remove("btn-info");
-        document.querySelector('#adc').classList.remove("btn-warning");
-        document.querySelector('#adc').classList.remove("btn-danger");
-        document.querySelector('#adc').classList.add("btn-success");
-      }
-      else if(volt>=1 & volt<2)
-      {
-        document.querySelector('#adc').classList.remove("btn-success");
-        document.querySelector('#adc').classList.remove("btn-warning");
-        document.querySelector('#adc').classList.remove("btn-danger");
-        document.querySelector('#adc').classList.add("btn-info");
-      }
-      else if(volt>=2 & volt<3)
-      {
-        document.querySelector('#adc').classList.remove("btn-success");
-        document.querySelector('#adc').classList.remove("btn-info");
-        document.querySelector('#adc').classList.remove("btn-danger");
-        document.querySelector('#adc').classList.add("btn-warning");
-      }
-      else
-      {
-        document.querySelector('#adc').classList.remove("btn-success");
-        document.querySelector('#adc').classList.remove("btn-info");
-        document.querySelector('#adc').classList.remove("btn-warning");
-        document.querySelector('#adc').classList.add("btn-danger");
-      }
-    }
-
-    function _update() {
-      if (!navigator.bluetooth) {
-        document.querySelector('#state').innerText = "Not supported!";
-        document.querySelector('#hint').innerText = "Hint: Web Bluetooth API is not available on current browser \n Try enable in chrome://flags/#enable-experimental-web-platform-features";
-        $("#install").hide();
-        document.querySelector('#connect').classList.add("disabled");
-        document.querySelector('#notify').classList.add("disabled");
-        $('input').attr('readonly', true);
-        document.querySelector('#show').classList.add("disabled");
-        document.querySelector('#adc').classList.add("disabled");
-        $("#toggle").hide();
-        // document.querySelector('#toggle').classList.add("disabled");
-        return;
-      }
-
-      if (connected) {
-        document.querySelector('#connect').onclick = _disconnect;
-        document.querySelector('#connect').innerText = "Disconnect";
-        document.querySelector('#connect').classList.remove("btn-primary");
-        $('input').attr('readonly', false);
-        // $('input').attr('value', '0810');
-        document.querySelector('#show').onclick = _show;
-        document.querySelector('#show').classList.remove("disabled");
-        document.querySelector('#show').classList.add("btn-primary");
-        document.querySelector('#adc').classList.remove("disabled");
-        document.querySelector('#adc').classList.add("btn-info");
-        document.querySelector('#state').innerText = "Connected";
-        document.querySelector('#hint').innerText = "Hint: Press Send or Recive to communicate with BLE";
-        // document.querySelector('#toggle').innerText = StatusValue;
-        // document.querySelector('#toggle').classList.remove("disabled");
-        // if (StatusValue == 1)
-        //   document.querySelector('#toggle').classList.add("btn-primary");
-        // else
-        //   document.querySelector('#toggle').classList.remove("btn-primary");
-        // document.querySelector('#toggle').onclick = _toggle;
-      }
-      else {
-        $("#install").hide();
-        document.querySelector('#connect').onclick = _connect;
-        document.querySelector('#connect').innerText = "Connect";
-        document.querySelector('#connect').classList.add("btn-primary");
-        document.querySelector('#state').innerText = "Disconnected";
-        document.querySelector('#hint').innerText = "Hint: Press Connect to connect to BLE";
-        $("#toggle").hide();
-        // document.querySelector('#toggle').classList.add("disabled");
-        // document.querySelector('#toggle').innerText = "Value";
-        // document.querySelector('#toggle').classList.remove("btn-primary");
-        document.querySelector('#notify').classList.add("disabled");
-        document.querySelector('#notify').classList.remove("btn-primary");
-        document.querySelector('#notify').innerText = "Not Receiving";
-        $('input').attr('readonly', true);
-        $('input').attr('value', '');
-        document.querySelector('#show').classList.add("disabled");
-        document.querySelector('#show').classList.remove("btn-primary");
-        document.querySelector('#adc').classList.add("disabled");
-        document.querySelector('#adc').classList.remove("btn-info");
-      }
-    }
-
-  </script>
-
-  <script>
-    function onScanSuccess(decodedText, decodedResult) {
-      console.log(`Code scanned = ${decodedText}`, decodedResult);
-    }
-    window.onload = function () {
-      var html5QrcodeScanner = new Html5QrcodeScanner(
-      "reader", { fps: 10, qrbox: 250 });
-      html5QrcodeScanner.render(onScanSuccess);
-    };
-  </script>
-
-</head>
-
-<body onload='_update()'>
-
-  <div class="container">
-    <div class="page-header">
-      <!-- for Web Apk -->
-      <span id="connection"><abbr title="You are online!">&#128246;</abbr></span>
-      <script src="js/jquery.min.js"></script>
-      <script src="js/main.js"></script>
-      <h2>
-        Test-0630
-        <br>
-        Web BLE demo
-      </h2>
-    </div>
-    <div class="row">
-      <div class="col-sm-3">
-        <button id='connect' type="button" class="btn btn-lg btn-block">Connect</button>
-        <br>
-        <button id='notify' type="button" class="btn btn-lg btn-block">Not Recieving</button>
-        <br>
-        <button id='adc' type="button" class="btn btn-lg btn-block">ADC</button>
-        <br>
-        <input  id="input" type="text" class="form-control form-control-lg" value=0812 placeholder="Enter 0~9999" readonly=true>
-        <br>
-        <button id='show' type="button" class="btn btn-lg btn-block">Show</button>
-        <br>
-        <button id='toggle' type="button" class="btn btn-lg btn-block">Value</button>
-        <br>
-        <button id='install' type="button" class="btn btn-lg btn-outline-light btn-block">Install</button>
-        <!-- <br>
-        <button id='send' type="button" class="btn btn-block">Send</button> -->
-      </div>
-      <div class="col-sm-9">
-        <!-- <h3 id="Scan ID">Demo</h3>
-          <div id="qr-reader" style="width: 600px; margin: auto; position: relative; padding: 0px; border: 1px solid silver;">
-        <div style="text-align: left; margin: 0px; padding: 5px; font-size: 20px; border-bottom: 1px solid rgba(192, 192, 192, 0.18);">
-          <span><a href="https://github.com/mebjas/html5-qrcode">Code Scanner</a></span>
-          <span id="qr-reader__status_span" style="float: right; padding: 5px 7px; font-size: 14px; background: rgb(238, 238, 255) none repeat scroll 0% 0%; border: 1px solid rgba(0, 0, 0, 0); color: rgb(17, 17, 17);">Idle</span>
-          <div id="qr-reader__header_message" style="display: none; font-size: 14px; padding: 2px 10px; margin-top: 4px; border-top: 1px solid rgb(246, 246, 246);"></div></div><div id="qr-reader__scan_region" style="width: 100%; min-height: 100px; text-align: center;">
-        <br><img style="opacity: 0.3;" src="QR%20and%20barcode%20scanner%20using%20HTML%20and%20Javascript%20Minhaz%E2%80%99s%20Blog_files/camera-scan.gif" width="64"></div>
-        <div id="qr-reader__dashboard" style="width: 100%;"><div id="qr-reader__dashboard_section" style="width: 100%; padding: 10px; text-align: left;"><div>
-          <div id="qr-reader__dashboard_section_csr" style="display: block;"><div style="text-align: center;">
-            <button>Request Camera Permissions</button></div></div><div id="qr-reader__dashboard_section_fsr" style="text-align: center; display: none;">
-        <input id="qr-reader__filescan_input" accept="image/*" type="file" style="width: 200px;" disabled="disabled"><span>&nbsp; Select Image</span></div></div><div style="text-align: center;">
-        <a style="text-decoration: underline;" id="qr-reader__dashboard_section_swaplink" href="#scan-using-file">Scan an Image File</a></div></div></div></div> -->
-        <!-- <div id="reader" style="display: inline-block;"></div> -->
-        <div class="empty"></div>
-        <div id="scanned-result"></div>
-        <h4 id='state'></h4>
-        <div id='hint'></div>
-        <h4>Log:</h4>
-        <pre id='log'></pre>
-        <div id="reader" ></div>
-      </div>
-    </div>
-  </div>
-
+    <title>Html-Qrcode Demo</title>
+<body>
+    <div id="qr-reader" style="width:500px"></div>
+    <div id="qr-reader-results"></div>
 </body>
+<script src="/html5-qrcode.min.js"></script>
+<script>
+    function docReady(fn) {
+        // see if DOM is already available
+        if (document.readyState === "complete"
+            || document.readyState === "interactive") {
+            // call on next available tick
+            setTimeout(fn, 1);
+        } else {
+            document.addEventListener("DOMContentLoaded", fn);
+        }
+    }
 
+    docReady(function () {
+        var resultContainer = document.getElementById('qr-reader-results');
+        var lastResult, countResults = 0;
+        function onScanSuccess(decodedText, decodedResult) {
+            if (decodedText !== lastResult) {
+                ++countResults;
+                lastResult = decodedText;
+                // Handle on success condition with the decoded message.
+                console.log(`Scan result ${decodedText}`, decodedResult);
+            }
+        }
+
+        var html5QrcodeScanner = new Html5QrcodeScanner(
+            "qr-reader", { fps: 10, qrbox: 250 });
+        html5QrcodeScanner.render(onScanSuccess);
+    });
+</script>
+</head>
 </html>
