--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
                 lastResult = decodedText;
                 // Handle on success condition with the decoded message.
                 console.log(`Scan result ${decodedText}`, decodedResult);
-                document.querySelector('#qr-reader-results').innerText = `Scan result ${decodedText}`, decodedResult;
+                document.querySelector('#qr-reader-results').innerText = decodedResult.decodedText;
+                // document.querySelector('#qr-reader-results').innerText = `Scan result ${decodedText}`, decodedResult;
             }
         }
 
