--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
                 // Handle on success condition with the decoded message.
                 console.log(`Scan result ${decodedText}`, decodedResult);
                 document.querySelector('#qr-reader-results').innerText = decodedResult.decodedText;
+                html5QrcodeScanner.stop();
                 html5QrcodeScanner.clear();
                 var html5QrcodeScanner = new Html5QrcodeScanner(
                     "qr-reader", { fps: 10, qrbox: 250 });
