--- a/index0812.html
+++ b/index0812.html
@@ -299,7 +299,7 @@
       <h2>
         
         <br>
-        Web BLE demo
+        壓力球 Demo
       </h2>
     </div>
     <div class="row">
@@ -308,11 +308,11 @@
         <br>
         <button id='notify' type="button" class="btn btn-lg btn-block">Not Recieving</button>
         <br>
-        <button id='adc' type="button" class="btn btn-lg btn-block">ADC</button>
+        <button id='adc' type="button" class="btn btn-lg btn-block">計數</button>
         <br>
-        <input  id="input" type="text" class="form-control" value=0810 placeholder="Enter 0~9999" readonly=true>
+        <input  id="input" type="text" class="form-control" value=0810 placeholder="輸入 40~99" readonly=true>
         <br>
-        <button id='show' type="button" class="btn btn-lg btn-block">Show</button>
+        <button id='show' type="button" class="btn btn-lg btn-block">設定閥值</button>
         <br>
         <button id='toggle' type="button" class="btn btn-lg btn-block">Value</button>
         <br>
